--- a/try.html
+++ b/try.html
@@ -26,17 +26,37 @@
 			};
 		}
 
+		function randomData_1() {
+			now = new Date(+now + oneDay);
+			value_1 = value_1 + Math.random() * 50 - 10;
+			return {
+				name: now.toString(),
+				value: [
+					[now.getFullYear(), now.getMonth() + 1, now.getDate()].join('/'),
+					Math.round(value_1)
+				]
+			};
+		}
+
 		var data = [];
+		var data_1 = [];
 		var now = +new Date(1997, 9, 3);
 		var oneDay = 24 * 3600 * 1000;
 		var value = Math.random() * 1000;
+		var value_1 = Math.random() * 500;
 		for (var i = 0; i < 1000; i++) {
 			data.push(randomData());
+			data_1.push(randomData_1());
 		}
 
 		option = {
 			title: {
-				text: '动态数据 + 时间坐标轴'
+				text: '动态数据 + 时间坐标轴',
+				left: 'center',
+				align: 'right'
+			},
+			grid: {
+				bottom: 80
 			},
 			tooltip: {
 				trigger: 'axis',
@@ -49,26 +69,56 @@
 					animation: false
 				}
 			},
+			toolbox: {
+				show: true,
+				feature: {
+					dataZoom: {
+						yAxisIndex: 'none'
+					},
+					dataView: {readOnly: false},
+					magicType: {type: ['line', 'bar']},
+					restore: {},
+					saveAsImage: {}
+				}
+			},
+			legend: {
+				data: ['电压数据', '电流数据'],
+				left: 10
+			},
 			xAxis: {
 				type: 'time',
 				splitLine: {
-					show: false
+					show: true
 				}
 			},
-			yAxis: {
+			yAxis: [{
+				name:'电压',
 				type: 'value',
 				boundaryGap: [0, '100%'],
 				splitLine: {
-					show: false
-				}
-			},
+					show: true
+				}},
+				{
+				name:'电流',
+				type: 'value',
+				boundaryGap: [0, '100%'],
+				splitLine: {show: true}
+			}],
 			series: [{
-				name: '模拟数据',
+				name: '电压数据',
 				type: 'line',
 				showSymbol: false,
 				hoverAnimation: false,
 				data: data
-			}]
+			},
+			{
+				name: '电流数据',
+				type: 'line',
+				showSymbol: false,
+				hoverAnimation: false,
+				data: data
+			}
+			]
 		};
         myChart.setOption(option)
 
@@ -77,11 +127,16 @@
 			for (var i = 0; i < 5; i++) {
 				data.shift();
 				data.push(randomData());
+				data_1.shift();
+				data_1.push(randomData_1());
 			}
 
 			myChart.setOption({
 				series: [{
 					data: data
+				},
+				{
+					data: data_1
 				}]
 			});
 		}, 1000);
